deploy/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: iceberg
spec:
  selector:
    app: iceberg
  ports:
    - name: http
      port: 80
      targetPort: 8000
